# wego-star-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: metroboard.service
docs/: FEATHER_MIGRATION.md  PHASES.md  PI_SETUP.md  ROUTE14_PLAN.md  WIRING.md
scripts/: fetch_static.py  hello_leds.py  hello_leds_partial.py  run_realtime.py  run_schedule.py
src/wego_metroboard/: feeds.py  gpio.py  leds.py  realtime.py  schedule.py  stations.py
tests/: test_leds.py  test_schedule.py
wego_transit/: calendar.txt  calendar_dates.txt  shapes.txt  stops.txt  trips.txt
